--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@
   <button data-lang="en" class="lang-btn">EN</button>
 </div>
 
-<script src="dist/script.js"></script>
+<script src="dist/script.ts"></script>
 </body>
 </html>
