zmiany na str 2 dla parametrow

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div class="selection-wrapper">
     <div class="grid type-grid">
-      <!-- Każdy przycisk ma explicite type="button" -->
+      <!-- UWAGA: każdy przycisk ma type="button" -->
       <button class="type-btn" data-type="compression" type="button"
               data-key="compression">Sprężyna naciskowa</button>
       <button class="type-btn" data-type="tension" type="button"
