--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
   </div>
 </section>
 
-  <!-- ======== KROK 2 – PARAMETRY SPRĘŻYNY ======== -->
-  <section class="step hidden" id="step-2">
-    <h2>Parametry sprężyny</h2>
-    <form id="params-form"></form>
+<!-- KROK 2 – PARAMETRY SPRĘŻYNY -->
+<section class="step hidden" id="step-2">
+  <h2 data-key="parameters">Parametry sprężyny</h2>
+  <form id="params-form"></form>
 
-    <div class="nav-buttons">
-      <button class="prev" id="back-1">Cofnij</button>
-      <button class="next" id="to-3">Dalej</button>
-    </div>
-  </section>
+  <div class="nav-buttons">
+    <button class="prev" id="back-1">Cofnij</button>
+    <button class="next" id="to-3">Dalej</button>
+  </div>
+</section>
 
   <!-- ======== KROK 3 – MATERIAŁ & ILOŚĆ ======== -->
   <section class="step hidden" id="step-3">
